# pesu-mc-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  start.sh  utils.py  webserver.py
.github/workflows/: deploy.yml
stats/: graphs.py  mongo.py
