[project]
name = "pesu-mc-bot"
version = "0.1.0"
description = "HE WHO OWNS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.4",
    "flask>=3.1.2",
    "google-auth>=2.47.0",
    "google-cloud-compute>=1.42.0",
    "gunicorn>=24.1.1",
    "matplotlib>=3.10.8",
    "mcstatus>=12.1.0",
    "mongo>=0.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
